Add XX:MaxPermSize to deal with PermGen errors. [HHQ-861]